# advent-of-code-2024

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
advent_of_code_2024/day01/: part1.py  part2.py
advent_of_code_2024/day02/: part1.py  part2.py
advent_of_code_2024/day03/: part1.py  part2.py
advent_of_code_2024/day04/: part1.py  part2.py
advent_of_code_2024/day05/: part1.py  part2.py
advent_of_code_2024/day06/: part1.py
tests/day01/: test__day01.py  test__part1.py  test__part2.py
tests/day02/: conftest.py  test__part1.py  test__part2.py
tests/day03/: conftest.py  test__part1.py  test__part2.py
tests/day04/: test__part1.py  test__part2.py
tests/day05/: test__part1.py  test__part2.py
tests/day06/: test__part1.py
